# graphrag-exam-evaluation

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  test_extract.py  test_extract2.py  test_extract3.py  test_full_pipeline.py  test_langchain.py  test_ocr.py
backend/scripts/: __init__.py  seed_data.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/routes/: exams.py  graph.py  health.py  students.py  submissions.py
backend/src/core/: database.py  exceptions.py
backend/src/models/: __init__.py
backend/src/services/: document_processor.py  exam_extractor_service.py  exam_service.py  math_correction_service.py
backend/tests/: conftest.py  test_health.py
deployment/: docker-compose.api.yml  docker-compose.yml
deployment/dev/: docker-compose.yml
deployment/local/: docker-compose.yml
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/exams/: page.tsx
frontend/app/graph/: page.tsx
frontend/app/statistics/: page.tsx
frontend/app/students/: page.tsx
frontend/app/submissions/: page.tsx
frontend/components/: LanguageSwitcher.tsx  index.ts  navigation.tsx
frontend/components/ui/: badge.tsx  button.tsx  index.ts  progress.tsx  select.tsx
frontend/lib/: api.ts  utils.ts
frontend/lib/constants/: files.ts  form.ts  graph.ts  ui.ts
react-app/: index.html  package-lock.json  package.json  tsconfig.json
react-app/src/: App.tsx  globals.css
(+38 files in other folders)
